--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
 						// Call fetchStreetName and wait for it to resolve
 						fetchStreetName().then((name) => {
 							// Construct full message
-							var fullMessage = "On a sunny day, the avatar's " + message + " while walking around " + name + " street.";
+							var fullMessage = "On a" + weatherDescription + " day, the avatar's " + message + " while walking around " + name + " street.";
 							// Set the text content
 							gestureDiv.textContent = fullMessage;
 							streetName = name;
@@ -586,7 +586,7 @@
 					} else {
 						// Construct full message using the existing streetName value
 						console.log("old position");
-						var fullMessage = "On a sunny day, the avatar's " + message + " while walking around " + streetName + " street.";
+						var fullMessage = "On a " + weatherDescription + " day, the avatar's " + message + " while walking around " + streetName + " street.";
 						// Set the text content
 						gestureDiv.textContent = fullMessage;
 						// Check if message is not empty to show the overlay
@@ -604,7 +604,7 @@
 				}, 3000);
 			}
 			// Define fetchWeather function
-			let globalWeatherDescription = null;
+			let weatherDescription = null;
 
 			function fetchWeather() {
 				// Define a promise to fetch weather description
@@ -632,8 +632,8 @@
 				})
 				.then(data => {
 					// Extract the weather description and store it globally
-					globalWeatherDescription = data.weather[0].description;
-					return globalWeatherDescription;
+					weatherDescription = data.weather[0].description;
+					return weatherDescription;
 				})
 				.catch(error => {
 					console.error('Error fetching weather data:', error);
