--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
 						// Call fetchStreetName and wait for it to resolve
 						fetchStreetName().then((name) => {
 							// Construct full message
-							var fullMessage = "On a" + weatherDescription + " day, the avatar's " + message + " while walking around " + name + " street.";
+							var fullMessage = "On a " + weatherDescription + " day, the avatar's " + message + " while walking around " + name + " street.";
 							// Set the text content
 							gestureDiv.textContent = fullMessage;
 							streetName = name;
@@ -603,9 +603,9 @@
 					gestureDiv.style.display = "none"; // Hide the overlay after clearing the text
 				}, 3000);
 			}
-			// Define fetchWeather function
-			let weatherDescription = null;
 
+			let weatherDescription = null;
+			// Define fetchWeather function
 			function fetchWeather() {
 				// Define a promise to fetch weather description
 				const weatherPromise = new Promise((resolve, reject) => {
@@ -652,6 +652,16 @@
 				return weatherPromise;
 			}
 			fetchWeather();
+
+			let timeOfDay =null;
+			function fetchIsDay() {
+				var currentTime = new Date().getHours();
+				return currentTime > 6 && currentTime < 18; // Assuming day is from 6 AM to 6 PM
+				timeOfDay = isDay() ? "day" : "night";
+				console.log(timeOfDay);
+			}
+
+			fetchIsDay();
 
 			function setupColors() {
 				lineColors[0] = color(204, 204, 0); // Dark Yellow
