--- a/index.html
+++ b/index.html
@@ -653,15 +653,15 @@
 			}
 			fetchWeather();
 
-			let timeOfDay =null;
-			function fetchIsDay() {
+			// Function to determine if it's day or night
+			function getTimeOfDay() {
 				var currentTime = new Date().getHours();
-				return currentTime > 6 && currentTime < 18; // Assuming day is from 6 AM to 6 PM
-				timeOfDay = isDay() ? "day" : "night";
-				console.log(timeOfDay);
+				return currentTime > 6 && currentTime < 18 ? "day" : "night"; // Assuming day is from 6 AM to 6 PM
 			}
 
-			fetchIsDay();
+			// Global variable to store whether it's day or night
+			var timeOfDay = getTimeOfDay();
+			console.log(timeOfDay);
 
 			function setupColors() {
 				lineColors[0] = color(204, 204, 0); // Dark Yellow
