--- a/index.html
+++ b/index.html
@@ -557,6 +557,7 @@
 			function displayMovementText(message) {
 				// Target the existing <div> element with the id "gestureDiv"
 				var gestureDiv = document.getElementById("gestureDiv");
+				var timeOfDay = getTimeOfDay();
 				// Clear existing timeout
 				clearTimeout(timeoutID);
 				// Check if the message has changed
@@ -572,7 +573,7 @@
 						// Call fetchStreetName and wait for it to resolve
 						fetchStreetName().then((name) => {
 							// Construct full message
-							var fullMessage = "On a " + weatherDescription + " day, the avatar's " + message + " while walking around " + name + " street.";
+							var fullMessage = "On a " + weatherDescription + timeOfDay + ", the avatar's " + message + " while walking around " + name + " street.";
 							// Set the text content
 							gestureDiv.textContent = fullMessage;
 							streetName = name;
@@ -586,7 +587,7 @@
 					} else {
 						// Construct full message using the existing streetName value
 						console.log("old position");
-						var fullMessage = "On a " + weatherDescription + " day, the avatar's " + message + " while walking around " + streetName + " street.";
+						var fullMessage = "On a " + weatherDescription +  timeOfDay + ", the avatar's " + message + " while walking around " + streetName + " street.";
 						// Set the text content
 						gestureDiv.textContent = fullMessage;
 						// Check if message is not empty to show the overlay
@@ -658,10 +659,6 @@
 				var currentTime = new Date().getHours();
 				return currentTime > 6 && currentTime < 18 ? "day" : "night"; // Assuming day is from 6 AM to 6 PM
 			}
-
-			// Global variable to store whether it's day or night
-			var timeOfDay = getTimeOfDay();
-			console.log(timeOfDay);
 
 			function setupColors() {
 				lineColors[0] = color(204, 204, 0); // Dark Yellow
