--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				height: 100vh;
 				background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent black background */
 				color: white;
-				font-size: 17vw; /* Very big text size */
+				font-size: 14vw; /* Very big text size */
 				display: none; /* Initially hidden */
 				z-index: 9999; /* Ensure it appears above other content */
 				text-align: center; /* Center align the text */
@@ -539,13 +539,13 @@
 					if (data.elements && data.elements.length > 0) {
 						return data.elements[0].tags['addr:street'];
 					} else {
-						return "unknown";
+						return "an unknown";
 					}
 				})
 				.catch((error) => {
 					console.error("Error fetching street name:", error);
 					throw error; // Rethrow the error for further handling if needed
-					return "unknown";
+					return "an unknown";
 				});
 			}
 			var timeoutID; // Variable to hold the timeout ID
