--- a/index.html
+++ b/index.html
@@ -540,13 +540,15 @@
 					if (data.elements && data.elements.length > 0) {
 						return data.elements[0].tags['addr:street'];
 					} else {
-						return "an unknown";
+						const unknName = "an unknown";
+						return unknName;
 					}
 				})
 				.catch((error) => {
 					console.error("Error fetching street name:", error);
 					throw error; // Rethrow the error for further handling if needed
-					return "an unknown";
+					const unknName = "an unknown";
+					return unknName;
 				});
 			}
 			var timeoutID; // Variable to hold the timeout ID
