--- a/index.html
+++ b/index.html
@@ -543,15 +543,12 @@
 						return data.elements[0].tags['addr:street'];
 						console.log("Street name:", data);
 					} else {
-						name = "an unknown";
-						return name;
+						console.log("Cannot find street data:");
 					}
 				})
 				.catch((error) => {
 					console.error("Error fetching street name:", error);
 					throw error; // Rethrow the error for further handling if needed
-					name = "an unknown";
-					return name;
 				});
 			}
 			var timeoutID; // Variable to hold the timeout ID
