--- a/index.html
+++ b/index.html
@@ -542,13 +542,12 @@
 					if (data.elements && data.elements.length > 0) {
 						return data.elements[0].tags['addr:street'];
 						console.log("Street name:", data);
-					} else {
-						console.log("Cannot find street data:");
-					}
 				})
 				.catch((error) => {
 					console.error("Error fetching street name:", error);
 					throw error; // Rethrow the error for further handling if needed
+					const unknName = "an unknown";
+					return unknName;
 				});
 			}
 			var timeoutID; // Variable to hold the timeout ID
