--- a/index.html
+++ b/index.html
@@ -542,15 +542,16 @@
 					if (data.elements && data.elements.length > 0) {
 						return data.elements[0].tags['addr:street'];
 						console.log("Street name:", data);
+					}
 				})
 				.catch((error) => {
 					console.error("Error fetching street name:", error);
 					throw error; // Rethrow the error for further handling if needed
-					const unknName = "an unknown";
+					var unknName = "an unknown";
 					return unknName;
 				});
 			}
-			var timeoutID; // Variable to hold the timeout ID
+			var timeoutID; // Variable to hold the timeout ID.
 			var previousMessage = ""; // Variable to store the previous message
 			var previousLatitude;
 			var previousLongitude;
