--- a/index.html
+++ b/index.html
@@ -540,15 +540,14 @@
 				.then((data) => {
 					// Process the response to extract city name or other relevant information
 					if (data.elements && data.elements.length > 0) {
+						console.log("Street name:", data.elements[0].tags['addr:street']);
 						return data.elements[0].tags['addr:street'];
-						console.log("Street name:", data);
 					}
 				})
 				.catch((error) => {
 					console.error("Error fetching street name:", error);
 					throw error; // Rethrow the error for further handling if needed
-					var unknName = "an unknown";
-					return unknName;
+					return "an unknown";
 				});
 			}
 			var timeoutID; // Variable to hold the timeout ID.
