--- a/index.html
+++ b/index.html
@@ -542,11 +542,13 @@
 					if (data.elements && data.elements.length > 0) {
 						console.log("Street name:", data.elements[0].tags['addr:street']);
 						return data.elements[0].tags['addr:street'];
+					} else {
+						throw new Error("Street name not found");
 					}
 				})
 				.catch((error) => {
 					console.error("Error fetching street name:", error);
-					throw error; // Rethrow the error for further handling if needed
+					//throw error; // Rethrow the error for further handling if needed
 					return "an unknown";
 				});
 			}
