--- a/index.html
+++ b/index.html
@@ -547,8 +547,7 @@
 					}
 				})
 				.catch((error) => {
-					console.error("Error fetching street name:", error);
-					//throw error; // Rethrow the error for further handling if needed
+					//console.error("Error fetching street name:", error);
 					return "an unknown";
 				});
 			}
