--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 					return;
 				}
 				// Check movement for each potentiometer
-				for (let i = 0; i < numPotentiometers; i++) {
+				for (let i = 0; i < numPotentiometers-1; i++) {
 					// Check movement based on potentiometer position and its corresponding label
 					if (labels[i] == "HEAD") {
 						// Movement detection for head (up and down movement)
