--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 						isConnected = false;
 						document.getElementById("connectButton").textContent = "Connect to Avatar";
 						// Set all potValues to 0
-						potValues = [0, 0, 0, 0, 0, 0, 0, 0, 0];
+						potValues = [0, 0, 0, 0, 0, 0, 0, 0];
 					}
 				} catch (error) {
 					console.error("Error connecting/disconnecting: " + error);
@@ -270,7 +270,7 @@
 		</script>
 		<script type="text/javascript">
 			// Processing 4 sketch to visualize movements of the Avatar
-			let numPotentiometers = 9;
+			let numPotentiometers = 8;
 			let potValues;
 			let lineColors;
 			let backgroundColors;
@@ -283,7 +283,7 @@
 			function setup() {
 				var avatarBTCanvas = createCanvas(windowWidth * 0.95, windowHeight * 0.6);
 				avatarBTCanvas.parent("avatarBTdiv");
-				potValues = [0, 0, 0, 0, 0, 0, 0, 0,0]; // Initialize potValues array with default values
+				potValues = [0, 0, 0, 0, 0, 0, 0, 0]; // Initialize potValues array with default values
 				lineColors = new Array(numPotentiometers);
 				backgroundColors = new Array(numPotentiometers);
 				setupColors();
@@ -349,7 +349,7 @@
 					return;
 				}
 				// Check movement for each potentiometer
-				for (let i = 0; i < numPotentiometers-1; i++) {
+				for (let i = 0; i < numPotentiometers; i++) {
 					// Check movement based on potentiometer position and its corresponding label
 					if (labels[i] == "HEAD") {
 						// Movement detection for head (up and down movement)
