--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 			function receiveData(data) {
 				if (window.receiveDataFromSerial) {
 					window.receiveDataFromSerial(data);
+					console.log(data);
 				} else {
 					console.error("Processing sketch not initialized.");
 				}
