--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 		</script>
 		<script type="text/javascript">
 			// Processing 4 sketch to visualize movements of the Avatar
-			let numPotentiometers = 9;
+			let numPotentiometers = 8;
 			let potValues;
 			let lineColors;
 			let backgroundColors;
@@ -283,7 +283,7 @@
 			function setup() {
 				var avatarBTCanvas = createCanvas(windowWidth * 0.95, windowHeight * 0.6);
 				avatarBTCanvas.parent("avatarBTdiv");
-				potValues = [0, 0, 0, 0, 0, 0, 0, 0, 0]; // Initialize potValues array with default values
+				potValues = [0, 0, 0, 0, 0, 0, 0, 0]; // Initialize potValues array with default values
 				lineColors = new Array(numPotentiometers);
 				backgroundColors = new Array(numPotentiometers);
 				setupColors();
@@ -326,13 +326,17 @@
 			// Function to receive data from JavaScript
 			function receiveData(data) {
 				let values = data.split(",");
-				console.log(values);
-				if (values.length === numPotentiometers) {
-					for (let i = 0; i < numPotentiometers; i++) {
+				let tagID = values.pop(); // Remove and store the last element as tagID
+				console.log("Values:", values);
+				console.log("Tag ID:", tagID);
+
+				if (values.length === numPotentiometers - 1) { // Check if the length of values is 8
+					for (let i = 0; i < values.length; i++) {
 						potValues[i] = parseFloat(values[i]);
 					}
 				}
 			}
+
 			function checkMovement() {
 				// Define thresholds for movement detection
 				let movementThreshold = 10; // Adjust as needed
