--- a/index.html
+++ b/index.html
@@ -327,9 +327,6 @@
 			function receiveData(data) {
 				let values = data.split(",");
 				let tagID = values.pop(); // Remove and store the last element as tagID
-				console.log("Values:", values);
-				console.log("Tag ID:", tagID);
-
 				if (values.length === numPotentiometers) { // Check if the length of values is 8
 					for (let i = 0; i < values.length; i++) {
 						potValues[i] = parseFloat(values[i]);
@@ -543,13 +540,16 @@
 				})
 				.then((response) => response.json())
 				.then((data) => {
-					// Process the response to extract city name or other relevant information
-					if (data.elements && data.elements.length > 0) {
-						console.log("Street name:", data.elements[0].tags['addr:street']);
-						return data.elements[0].tags['addr:street'];
-					} else {
-						throw new Error("Street name not found");
+					// Loop through elements to find 'addr:street' property
+					for (let i = 0; i < data.elements.length; i++) {
+						const element = data.elements[i];
+						if (element.tags && element.tags['addr:street']) {
+							console.log("Street name:", element.tags['addr:street']);
+							return element.tags['addr:street']; // Found, return street name
+						}
 					}
+					// If 'addr:street' is not found in any element, throw an error
+					throw new Error("Street name not found");
 				})
 				.catch((error) => {
 					//console.error("Error fetching street name:", error);
