--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
 					} else {
 						// Construct full message using the existing streetName value
 						console.log("old position");
-						var fullMessage = "On a " + weatherDescription + " " + timeOfDay + ", the avatar's " + message + " while walking around " + streetName + " street.";
+						var fullMessage = "On a " + weatherDescription + timeOfDay + ", the avatar's " + message + " while walking around " + streetName + " street.";
 						// Set the text content
 						gestureDiv.textContent = fullMessage;
 						// Check if message is not empty to show the overlay
@@ -665,7 +665,7 @@
 			// Function to determine if it's day or night
 			function getTimeOfDay() {
 				var currentTime = new Date().getHours();
-				return currentTime > 6 && currentTime < 18 ? "day" : "night"; // Assuming day is from 6 AM to 6 PM
+				return currentTime > 6 && currentTime < 18 ? "-kind of day" : "-kind of night"; // Assuming day is from 6 AM to 6 PM
 			}
 
 			function setupColors() {
