--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
 			#findClosestShopButton {
 				background-color: #6eb183; /* Blue */
 			}
+
+			.tagID-12 {
+				background-color: deepblue;
+			}
 		</style>
 	</head>
 	<body>
@@ -667,6 +671,14 @@
 			function getTimeOfDay() {
 				var currentTime = new Date().getHours();
 				return currentTime > 6 && currentTime < 18 ? "-kind of day" : "-kind of night"; // Assuming day is from 6 AM to 6 PM
+			}
+
+			function readTag(tagID) {
+				if (tagID === 12) {
+					document.body.classList.add('tagID-12');
+				} else {
+					document.body.classList.remove('tagID-12');
+				}
 			}
 
 			function setupColors() {
