--- a/index.html
+++ b/index.html
@@ -681,6 +681,8 @@
 				}
 			}
 
+			readTag(tagID);
+
 			function setupColors() {
 				lineColors[0] = color(204, 204, 0); // Dark Yellow
 				lineColors[1] = color(204, 204, 0); // Dark Yellow
