--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
 			function receiveData(data) {
 				let values = data.split(",");
 				tagID = values.pop(); // Remove and store the last element as tagID
+				console.log(tagID);
 				if (values.length === numPotentiometers) { // Check if the length of values is 8
 					for (let i = 0; i < values.length; i++) {
 						potValues[i] = parseFloat(values[i]);
