--- a/index.html
+++ b/index.html
@@ -676,13 +676,7 @@
 			}
 
 			function readTag(tagID) {
-				if (tagID === 12) {
-					document.body.classList.add('tagID-12');
-					console.log("Tag is 12");
-				} else {
-					document.body.classList.remove('tagID-12');
-					console.log("Tag is not 12");
-				}
+				console.log(tagID);
 			}
 
 			readTag(tagID);
