--- a/index.html
+++ b/index.html
@@ -675,11 +675,11 @@
 				return currentTime > 6 && currentTime < 18 ? "-kind of day" : "-kind of night"; // Assuming day is from 6 AM to 6 PM
 			}
 
-			function readTag(tagID) {
+			function readTag() {
 				console.log(tagID);
 			}
 
-			readTag(tagID);
+			readTag();
 
 			function setupColors() {
 				lineColors[0] = color(204, 204, 0); // Dark Yellow
