--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 			var previousPotValues = new Array(numPotentiometers);
 			const cooldownDuration = 500; // 1 second
 			let detectMovement = true;
-			let tagID=0;
+			var tagID=0;
 
 			function setup() {
 				var avatarBTCanvas = createCanvas(windowWidth * 0.95, windowHeight * 0.6);
