--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
 
 			function readTag() {
 				if (tagID === 12) {
-					document.body.style.backgroundColor = '#4caf50';
+					document.body.style.backgroundColor = "#4caf50";
 				} else {
 					document.body.style.backgroundColor = ''; // Reset to default background color
 				}
