--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
 			}
 
 			function readTag() {
-				if (tagID === 12) {
+				if (tagID === "12") {
 					document.body.style.backgroundColor = "#4caf50";
 					console.log("Tag is 12, change color");
 				} else {
@@ -686,7 +686,6 @@
 				}
 					console.log(tagID);
 			}
-
 
 			function setupColors() {
 				lineColors[0] = color(204, 204, 0); // Dark Yellow
