--- a/index.html
+++ b/index.html
@@ -678,13 +678,8 @@
 
 			function readTag() {
 				if (tagID === "12") {
-					document.body.style.backgroundColor = "#4caf50";
-					console.log("Tag is 12, change color");
-				} else {
-					document.body.style.backgroundColor = ''; // Reset to default background color
-					console.log("Return to original color");
+					displayMovementText("world turned blue");
 				}
-					console.log(tagID);
 			}
 
 			function setupColors() {
