--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 			let tagID;
 
 			function setup() {
-				var avatarBTCanvas = createCanvas(windowWidth * 0.95, windowHeight * 0.6);
+				var avatarBTCanvas = createCanvas(windowWidth, windowHeight * 0.6);
 				avatarBTCanvas.parent("avatarBTdiv");
 				potValues = [0, 0, 0, 0, 0, 0, 0, 0]; // Initialize potValues array with default values
 				lineColors = new Array(numPotentiometers);
