--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 				align-items: center;
 				justify-content: center;
 				height: 100vh;
+				background-color: #48494B;
+			}
+			h1 {
+				color: white;
 			}
 			#avatarBTdiv {
 				margin-bottom: 20px;
@@ -48,7 +52,7 @@
 			}
 			.button {
 				background-color: #4caf50; /* Green */
-				width: 45%; /* Adjust the width as needed */
+				width: 48%; /* Adjust the width as needed */
 				border: none;
 				color: white;
 				padding: 15px 32px;
@@ -56,7 +60,7 @@
 				text-decoration: none;
 				display: inline-block;
 				font-size: 16px;
-				margin: 4px 2px;
+				margin: 4px 4px;
 				cursor: pointer;
 				border-radius: 8px;
 				font-family: "Roboto", sans-serif;
@@ -68,10 +72,6 @@
 			/* Find Closest Shop button style */
 			#findClosestShopButton {
 				background-color: #6eb183; /* Blue */
-			}
-
-			.tagID-12 {
-				background-color: deepblue;
 			}
 		</style>
 	</head>
