--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			}
 			h1 {
 				font-size: 48px;
-				color: white;
+				color: #999da0;
 			}
 			#avatarBTdiv {
 				margin-bottom: 20px;
@@ -129,10 +129,10 @@
 						document.getElementById("connectButton").textContent = "Connect to Avatar";
 						// Set all potValues to 0
 						potValues = [0, 0, 0, 0, 0, 0, 0, 0, 0];
-						displayMovementText("presence is offline");
 						setTimeout(function() {
 							startDetectMovement = false;
 						}, 4000);
+						displayMovementText("presence is offline");
 					}
 				} catch (error) {
 					console.error("Error connecting/disconnecting: " + error);
