--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 						// Update UI
 						document.getElementById("connectButton").textContent = "Disconnect Avatar";
 						isConnected = true;
-						displayMovementText("presence is online");
+						displayMovementText("status is online");
 						setTimeout(function() {
 							startDetectMovement = true;
 						}, 4000);
@@ -132,7 +132,7 @@
 						setTimeout(function() {
 							startDetectMovement = false;
 						}, 4000);
-						displayMovementText("presence is offline");
+						displayMovementText("status is offline");
 					}
 				} catch (error) {
 					console.error("Error connecting/disconnecting: " + error);
