--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
 
 			function readTag() {
 				if (tagID === "12") {
-					displayText("After some time walking up and down ${name} street, the ${timeOfDay} turned blue.");
+					displayText("After some time walking up and down ${name} street, the day turned blue.");
 				}
 			}
 
