--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 					console.error("Error connecting/disconnecting: " + error);
 				}
 			}
-			// Attach click event listener to button
+			// Attach click event listener to button.
 			document.getElementById("connectButton").addEventListener("click", connectToDevice);
 			// Function to handle incoming data from UART
 			function handleCharacteristicValueChanged(event) {
