Added function for text to speech

--- a/index.html
+++ b/index.html
@@ -641,19 +641,32 @@
 				return fullMessage;
 			}
 
+			// Variable to store the last spoken message
+			let lastSpokenMessage = '';
+
 			function speakMessage(fullMessage) {
-				// Create a new instance of SpeechSynthesisUtterance
-				const utterance = new SpeechSynthesisUtterance(fullMessage);
-
-				// Filter available voices to find Karen's voice in Australian English
-				const karenVoice = speechSynthesis.getVoices().find(voice => voice.name === 'Karen' && voice.lang === 'en-AU');
-
-				// Set the voice to Karen's voice if found, otherwise use the default voice
-				utterance.voice = karenVoice || speechSynthesis.getVoices()[0];
-
-				// Speak the message
-				speechSynthesis.speak(utterance);
+			// Check if the message is the same as the last spoken message
+			if (fullMessage === lastSpokenMessage) {
+				console.log("Message already spoken.");
+				return; // Exit the function without speaking again
 			}
+
+			// Create a new instance of SpeechSynthesisUtterance
+			const utterance = new SpeechSynthesisUtterance(fullMessage);
+
+			// Filter available voices to find Karen's voice in Australian English
+			const karenVoice = speechSynthesis.getVoices().find(voice => voice.name === 'Karen' && voice.lang === 'en-AU');
+
+			// Set the voice to Karen's voice if found, otherwise use the default voice
+			utterance.voice = karenVoice || speechSynthesis.getVoices()[0];
+
+			// Speak the message
+			speechSynthesis.speak(utterance);
+
+			// Update the last spoken message
+			lastSpokenMessage = fullMessage;
+			}
+
 
 			let weatherDescription = null;
 			// Define fetchWeather function
