--- a/index.html
+++ b/index.html
@@ -7,74 +7,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-		<style>
-			body {
-				font-family: "Roboto", sans-serif;
-				margin: 0; /* Remove default margin */
-				padding: 0; /* Remove default padding */
-				display: flex;
-				flex-direction: column;
-				align-items: center;
-				justify-content: center;
-				height: 100vh;
-				background-color: #48494B;
-			}
-			h1 {
-				font-size: 48px;
-				color: #999da0;
-			}
-			#avatarBTdiv {
-				margin-bottom: 20px;
-				width: 100vw;
-				position: relative;
-			}
-			#closestShop,
-			#currentLocation,
-			#headingChange {
-				width: 100%;
-				text-align: center;
-				color: #000; /* Black text color */
-				font-size: 16px; /* Text size */
-			}
-			#gestureDiv {
-				font-weight: 700;
-				position: fixed;
-				top: 0;
-				left: 0;
-				width: 100vw;
-				height: 100vh;
-				background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent black background */
-				color: white;
-				font-size: 12vw; /* Very big text size */
-				display: none; /* Initially hidden */
-				z-index: 9999; /* Ensure it appears above other content */
-				text-align: center; /* Center align the text */
-				padding-top: 0vh; /* Vertical padding to center the text */
-			}
-			.button {
-				background-color: #4caf50; /* Green */
-				width: 45%; /* Adjust the width as needed */
-				border: none;
-				color: white;
-				padding: 15px 32px;
-				text-align: center;
-				text-decoration: none;
-				display: inline-block;
-				font-size: 16px;
-				margin: 4px 4px;
-				cursor: pointer;
-				border-radius: 8px;
-				font-family: "Roboto", sans-serif;
-			}
-			/* Disconnect button style */
-			#connectButton {
-				background-color: #0082fc; /* Red */
-			}
-			/* Find Closest Shop button style */
-			#findClosestShopButton {
-				background-color: #6eb183; /* Blue */
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="styles.css" />
 	</head>
 	<body>
 		<h1>Avatar BT Debug</h1>
@@ -657,21 +590,15 @@
 					console.log("Already speaking, new message ignored.");
 					return;
 				}
-
 				speaking = true;
-
 				// Create a new instance of SpeechSynthesisUtterance
 				const utterance = new SpeechSynthesisUtterance(fullMessage);
-
 				// Filter available voices to find Karen's voice in Australian English
 				const karenVoice = speechSynthesis.getVoices().find(voice => voice.name === 'Karen' && voice.lang === 'en-AU');
-
 				// Set the voice to Karen's voice if found, otherwise use the default voice
 				utterance.voice = karenVoice || speechSynthesis.getVoices()[0];
-
 				// Speak the message
 				speechSynthesis.speak(utterance);
-
 				utterance.onend = function() {
 					speaking = false;
 				}
