--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="styles.css" />
+		<!-- Script for connecting via Bluetooth -->
+		<script>src="BT_connect.js"	</script>
 	</head>
 	<body>
 		<h1>Avatar BT Debug</h1>
@@ -25,10 +27,7 @@
 		<div id="headingChange"></div>
 		<!-- Movement>-->
 		<div id="gestureDiv"></div>
-		<!-- Script for connecting via Bluetooth -->
-		<script>
-			src="BT_connect.js"
-		</script>
+
 		<script>
 			var latitude;
 			var longitude;
