--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 		<!-- Script for connecting via Bluetooth -->
-		<script>src="BT_connect.js"	</script>
+		<script>
+			src="BT_connect.js"
+		</script>
 	</head>
 	<body>
 		<h1>Avatar BT Debug</h1>
 		<div id="avatarBTdiv">
 			<!-- Connect Button -->
-			<button id="connectButton" class="button" onclick="connectToDevice()"">Connect to Avatar</button>
+			<button id="connectButton" class="button" onclick="connectToDevice()">Connect to Avatar</button>
 			<!-- Find Closest Shop Button -->
 			<button id="findClosestShopButton" class="button" onclick="findClosestShop()">Find Closest Shop</button>
 		</div>
