--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h1>Avatar BT Debug</h1>
 		<div id="avatarBTdiv">
 			<!-- Connect Button -->
-			<button id="connectButton" class="button">Connect to Avatar</button>
+			<button id="connectButton" class="button" onclick="connectToDevice()">Connect to Avatar</button>
 			<!-- Find Closest Shop Button -->
 			<button id="findClosestShopButton" class="button" onclick="findClosestShop()">Find Closest Shop</button>
 		</div>
